# Pannot

./: .gitignore  README.md  eval_res.md  hostfile.txt  inference.ipynb  pyproject.toml  visualization.py
cookbook/: projector.py
pannot/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
pannot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pannot/eval/: run_pannot.py  run_pannot_projection.py
pannot/eval/eval_opi/: download_test_opi_data.py  eval_one4all.sh  eval_opi_dataset_pannot.py  eval_opi_dataset_pannot.sh  eval_opi_dataset_pannot_AP.sh  eval_opi_dataset_pannot_KM.sh  eval_opi_dataset_pannot_SU.sh  eval_opi_dataset_pannot_finetuned.sh  test_opi.py
pannot/eval/eval_opi/compute_scores/: .metrics4all.py.swp  accuracy4fold_type.py  metrics4all.py
pannot/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  encoder_inference.ipynb  make_delta.py  pannot_arch.py  utils.py
pannot/model/language_model/: pannot_llama.py  pannot_mistral.py  pannot_mpt.py
pannot/model/multimodal_encoder/: builder.py  clip_encoder.py  encoder_only.ipynb  esm3structure_encoder.py  esm_encoder.py  esm_seq_encoder.py  esmif_encoder.py
pannot/model/multimodal_projector/: builder.py
pannot/train/: dataset.ipynb  pannot_trainer.py  train.py  trainLlava.py  train_mem.py  train_xformers.py
scripts/: .zero3.json.swp  finetune.sh  finetune_lora.sh  hostfile.txt  pretrain.sh  pretrain_xformers.sh
